# opo

./: .gitignore  Opo_FSD_v1.1.md  README.md  RELEASE_HANDOFF.md  RELEASE_NOTES.md  TASK_LIST.md  TODO.md  pytest.ini  vercel.json
.github/workflows/: ci.yml
backend/: check_supabase.py  main.py  pyproject.toml  seed_data.py  test_main.py
backend/routers/: ai.py  ai_utils.py  auth.py  campaigns.py  compliance.py  content.py  ketua_arisan.py  referrals.py  settings.py  telegram_helper.py
design/: README.md
frontend/: lighthouse-report.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/__tests__/: components.test.jsx
frontend/src/components/: Login.jsx  Navigation.jsx  PinAuthModal.jsx  PinLogin.jsx  Signup.jsx
frontend/src/components/ui/: button.jsx  input.jsx
frontend/src/pages/: AIAgentsHub.jsx  AIHub.jsx  Calendar.jsx  CampaignManager.jsx  CommunityIntelligence.jsx  ContentBank.jsx  ContentGenerator.jsx  Dashboard.jsx  ReferralTracker.jsx  Settings.jsx
infra/: deploy.sh
supabase/: schema.sql
